# Desafio-GenAI

./: .env.example  .gitignore  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  sonar-project.properties
backend/scripts/: gerar_mapa_svg.py
backend/src/srag_report/: __init__.py  cli.py  composition.py
backend/src/srag_report/api/: agendador.py  landing.py  main.py  mapa_svg.py
backend/src/srag_report/application/: avaliacao.py  narrativa.py  noticias.py  regional.py  relatorio.py  tools.py
backend/src/srag_report/application/orchestration/: __init__.py  graph.py  state.py
backend/src/srag_report/config/: settings.py
backend/src/srag_report/domain/: errors.py  metrics.py  models.py  news.py  ports.py
backend/src/srag_report/infrastructure/audit/: postgres_audit.py
backend/src/srag_report/infrastructure/data/: postgres_repo.py
backend/src/srag_report/infrastructure/llm/: openrouter_client.py
backend/src/srag_report/infrastructure/news/: newsapi_client.py  postgres_noticias.py
backend/src/srag_report/infrastructure/report/: charts.py  pdf_renderer.py  renderer.py
backend/tests/: test_agendador.py  test_edge.py  test_health.py  test_metrics.py  test_narrativa.py  test_news.py  test_noticias.py  test_observabilidade.py  test_orchestration.py  test_regional.py  test_relatorio.py
dados/: Dockerfile  README.md  pyproject.toml
dados/dbt/: .sqlfluff  dbt_project.yml  profiles.yml
dados/dbt/macros/: generate_schema_name.sql
dados/dbt/models/: README.md
dados/dbt/models/bronze/: README.md  _bronze__sources.yml
dados/dbt/models/gold/: README.md  _gold__models.yml  dim_data.sql  fct_srag_diario.sql  gold_mart_srag_diario.sql
dados/dbt/models/marts/: _exposures.yml  _marts__models.yml  dim_data.sql  dim_uf.sql  fct_srag_diario.sql  gold_mart_srag_diario.sql
dados/dbt/models/silver/: README.md  _silver__models.yml  silver_srag_casos.sql
dados/dbt/models/staging/: _staging__models.yml  stg_srag__casos.sql
dados/dbt/scripts/: gerar_readmes.py
dados/dbt/seeds/: _seeds.yml  seed_uf.csv
dados/dbt/tests/: assert_fct_grao_unico.sql  assert_fct_medidas_coerentes.sql  assert_gold_grao_unico.sql
dados/src/srag_etl/: __init__.py  __main__.py  config.py  extract_load.py
data/: .gitignore  README.md
data/raw/srag/: MANIFEST.md
docs/: dicionario-de-dados.md  gerar_diagrama.py
grafana/provisioning/dashboards/: dashboards.yaml  srag.json
grafana/provisioning/datasources/: postgres.yaml
vault/: README.md  agente-orquestrador.md  arquitetura.md  camada-dados.md  camada-tools.md  criterios-avaliacao.md  geracao-relatorio.md  principios-solid.md  qualidade-governanca.md  roadmap.md
vault/arquitetura/: agente-orquestrador.md  camada-dados.md  camada-tools.md  containerizacao.md  dados-sensiveis.md  estrutura-projeto.md  geracao-relatorio.md  governanca-auditoria.md  guardrails.md  observabilidade.md  principios.md  qualidade-tooling.md  resiliencia.md  tratamento-erros.md  visao-geral.md  visualizacao-bi.md
vault/decisoes/: adr-0001-provedor-llm.md  adr-0002-fonte-noticias.md  adr-0003-estrategia-mvp-primeiro.md  adr-0004-llm-orquestra-python-calcula.md  adr-0005-langgraph.md  adr-0006-duckdb.md  adr-0007-metricas-proxy.md  adr-0008-arquitetura-hexagonal.md  adr-0009-tooling-uv-ruff-mypy.md  adr-0010-resiliencia.md  adr-0011-async-io.md  adr-0012-observabilidade.md  adr-0013-containerizacao.md  adr-0014-grafana.md  adr-0015-dbt-medallion.md  adr-0016-modelagem-dimensional.md  adr-0017-dados-provisorios.md
vault/dominio/: metricas.md  srag-datasus.md
vault/planejamento/: fases.md  stack.md
vault/templates/: adr.md
