[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srag-report"
version = "0.1.0"
description = "Backend: API + agente que gera relatório de SRAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "psycopg[binary]>=3.1",
    "tenacity>=8.4",
]
# NOTA: langgraph, langchain-openai, matplotlib e weasyprint entram nas Fases 4-6
# (mantém a imagem inicial enxuta e o boot rápido).

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
