[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srag-report"
version = "0.1.0"
description = "Backend: API + agente que gera relatório de SRAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "psycopg[binary]>=3.1",
    "tenacity>=8.4",
    "httpx>=0.27",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "plotly>=5.22,<6",
    "kaleido==0.2.1",
    "weasyprint>=62",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "import-linter>=2.0",
    "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true

# Libs de terceiros sem type stubs completos — não afeta o rigor no nosso código.
[[tool.mypy.overrides]]
module = ["plotly.*", "weasyprint", "kaleido.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=srag_report --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["srag_report"]
# I/O e cola de framework são cobertos por testes de integração (em Docker), não unitários.
omit = [
    "*/api/main.py",
    "*/cli.py",
    "*/composition.py",
    "*/infrastructure/data/postgres_repo.py",
    "*/infrastructure/audit/postgres_audit.py",
    "*/infrastructure/llm/openrouter_client.py",
    "*/infrastructure/report/pdf_renderer.py",
    "*/infrastructure/report/charts.py",
    "*/infrastructure/report/renderer.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "\\.\\.\\.", "if __name__ == .__main__.:"]

# ── import-linter: impõe as fronteiras da arquitetura hexagonal ──
[tool.importlinter]
root_package = "srag_report"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domínio não depende de aplicação/infraestrutura/frameworks"
type = "forbidden"
source_modules = ["srag_report.domain"]
forbidden_modules = [
    "srag_report.application",
    "srag_report.infrastructure",
    "srag_report.api",
    "langgraph",
    "langchain_openai",
    "psycopg",
    "httpx",
    "plotly",
    "weasyprint",
]

[[tool.importlinter.contracts]]
name = "Aplicação não depende de infraestrutura nem de API"
type = "forbidden"
source_modules = ["srag_report.application"]
forbidden_modules = ["srag_report.infrastructure", "srag_report.api"]
