[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srag-etl"
version = "0.1.0"
description = "ETL de SRAG (DATASUS) — carrega marts agregados no Postgres"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "duckdb>=1.0",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
strict = true
